<resources>
    <string name="app_name">QuizzApp2</string>
    <string name="header">Programmable Logic Controlers quizz</string>
    <string name="q1">Q1: Alternative acronym for PLC (from German) is: </string>
    <string name="q2">Q2: What was the most important reason PLCs were developed?</string>
    <string name="q3">Q3: What is the base of the ladder diagram, the most popular language used in PLC programming?</string>
    <string name="q4">Q4: In which language is this code written?</string>
    <string name="q5">Q5: Select correct statements</string>
    <string name="q6">Q6: What is the name of the newest programming environment dedicated for Siemens PLCs?</string>
    <string name="q7">Q7: The most logic controlers is produced by:</string>
    <string name="btnSubmit">Submit answers</string>
    <string name="q2a1">A way to implement complicated logic</string>
    <string name="q2a2">Too much wires in automation systems</string>
    <string name="q2a3">Someone though it would be vey profitable</string>
    <string name="q3a1">Assembler</string>
    <string name="q3a2">BASIC</string>
    <string name="q3a3">Electrical diagrams</string>
    <string name="q4a1">Ladder diagram</string>
    <string name="q4a2">Statement List</string>
    <string name="q4a3">Structured Control Language</string>
    <string name="q5a1">Program in PLC is executed in cycles</string>
    <string name="q5a2">Outputs are actuated as soon as they are changed in program</string>
    <string name="q5a3">Function blocks have their own internal memory</string>
    <string name="q6a1">Step7</string>
    <string name="q6a2">PLC Studio</string>
    <string name="q6a3">Totally Integrated Automation Portal</string>
    <string name="q7a1">Allen - Bradley</string>
    <string name="q7a2">Mitsubishi</string>
    <string name="q7a3">Siemens</string>
    <string name="summary">Questions answered correctly:</string>
</resources>
